# sqlite3-cmake

./: BpcPackageDefaults.cmake  CMakeLists.txt
bpc-package/: BpcCompiler.cmake  BpcCreateBuildDirs.cmake  BpcHelpers.cmake  BpcPackage.cmake  CMakeToolchainNISOM.cmake  bpc_build.cmake  build.bat  build.sh
src/: sqlite3.def
